Email sending is worked